@@ -20,6 +20,7 @@ CHANGELOG
 * Add POIs on trek GPX (fixes #774)
 * Allow to override the Trek public document template
   (see *advanced configuration* in docs)
+* Intervention disorders is not mandatory anymore (fixes #661)
 
 
 0.23.1 (2014-05-22)
